mobile spacing fixes

--- a/src/scss/components/_aboutUs__carousel.scss
+++ b/src/scss/components/_aboutUs__carousel.scss
@@ -4,6 +4,7 @@
     margin: auto;
     overflow: hidden;
     position: relative;
+    margin-top: 5rem;
 
     
     &__container{
