--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -7,7 +7,7 @@
     background: url('/src/img/footer-bg.jpg');
     background-size: cover;
     background-position: center center;
-    padding: 5rem 15%;
+    padding: 5rem 10%;
     grid-row-gap: 3rem;
     
 
@@ -67,7 +67,7 @@
 .social{
     background-color:#11173b;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     padding: 2.5rem 10%;
     
     &>i{
