--- a/src/scss/layout/_team.scss
+++ b/src/scss/layout/_team.scss
@@ -10,7 +10,7 @@
     &__element {
         font-size: 1.2rem;
         color: $grey-color;
-        line-height: 2.5;
+        line-height: 2;
         position: relative;
         padding-left: 2rem;
 
